<resources>
    <string name="app_name">Kaisinema</string>
    <string name="img_desc">Awesome Image</string>

    <string name="alert_login_success">Login success</string>
    <string name="alert_username_required">Username is required</string>
    <string name="alert_password_required">Password is required</string>
    <string name="alert_user_not_exists">User is not exists</string>

    <string name="title_profile">Profile</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="title_remember_password">Remember password</string>
    <string name="title_email">Email</string>
    <string name="title_full_name">Full Name</string>
    <string name="title_address">Address</string>
    <string name="title_gender">Gender</string>
    <string name="empty_hint" />
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_login_by_google">Login with Google</string>
    <string name="label_new_user">New User?</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="alert_invalid_email">Invalid email</string>
    <string name="alert_invalid_password">Password must contains at least one uppercase, one number and one special character</string>
    <string name="title_welcome_back">Welcome Back!</string>
    <string name="label_please_login">Please login to your account</string>
    <string name="label_remember_me">Remember Me</string>
    <string name="label_have_no_account">Or you don\'t have account yet?</string>
    <string name="title_register">Register</string>
    <string name="label_agree_with_tos">By using this app you agree with our</string>
    <string name="title_tos"><![CDATA[Term of Service & Policies]]></string>
    <string name="title_register_now">Register Now</string>
    <string name="label_please_fill_up_register">Please fill up the fields to create account</string>
    <string name="title_name">Name</string>
    <string name="title_create_password">Create Password</string>
    <string name="label_password_clue">Password must consist of 8 characters</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="span_agree_with_tos">By creating this account I agree with the <b>Term of Service &amp; Policies</b> of this app</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_phone_number">Phone Number</string>
    <string name="title_male">Male</string>
    <string name="title_female">Female</string>
    <string name="label_forgot_your_password">Forgot your password?</string>
    <string name="label_we_got_your_back">Don\'t worry, we got your back</string>
    <string name="title_send_instructions">Send Instructions</string>
    <string name="label_did_remember_password">Did you remember your password?</string>
    <string name="title_reset_your_password">Reset Your Password</string>
    <string name="title_new_password">New Password</string>
    <string name="title_confirm_new_password">Confirm New Password</string>
    <string name="title_done">Done</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_success">Success</string>
    <string name="alert_invalid_full_name">Invalid name</string>
    <string name="alert_invalid_phone_number">Invalid phone number</string>
    <string name="alert_invalid_confirm_password">Confirm password is not match</string>
    <string name="alert_check_email_forgot_password">An instruction sent to your email</string>
    <string name="alert_invalid_token">Invalid Token</string>
    <string name="title_nothing_to_show">Nothing to Show</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_popular">Popular</string>
    <string name="label_colon">:</string>
    <string name="title_release_date">Release Date</string>
    <string name="title_rating">Rating</string>
    <string name="title_genre">Genre</string>
    <string name="title_title">Title</string>
    <string name="title_synopsis">Synopsis</string>
    <string name="label_dynamic_votes">%1$d Votes</string>
</resources>
