<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/view_24"
        android:paddingTop="@dimen/view_32"
        android:paddingEnd="@dimen/view_24"
        android:paddingBottom="@dimen/view_32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_forgot_your_password"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_8"
            android:text="@string/label_we_got_your_back"
            android:textColor="@color/logo_scheme_2" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/view_16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_12"
                android:layout_marginEnd="@dimen/view_8"
                android:text="@string/title_email" />

            <custom.view.widget.NoChangingBackgroundTextInputLayout
                android:id="@+id/form_email"
                style="@style/NoBackgroundTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/empty_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="32"
                    android:maxLines="1" />
            </custom.view.widget.NoChangingBackgroundTextInputLayout>

            <Button
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_32"
                android:layout_marginEnd="@dimen/view_8"
                android:enabled="false"
                android:text="@string/title_send_instructions" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>