<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/view_24"
        android:paddingTop="@dimen/view_32"
        android:paddingEnd="@dimen/view_24"
        android:paddingBottom="@dimen/view_32">

        <ImageView
            android:layout_width="@dimen/view_200"
            android:layout_height="@dimen/view_100"
            android:layout_gravity="center"
            android:contentDescription="@string/img_desc"
            app:srcCompat="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_reset_your_password"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/view_16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_12"
                android:layout_marginEnd="@dimen/view_8"
                android:ellipsize="end"
                android:maxLength="32"
                android:maxLines="1"
                android:text="@string/title_new_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8"
                android:text="@string/label_password_clue"
                android:textColor="@color/logo_scheme_3" />

            <custom.view.widget.NoChangingBackgroundTextInputLayout
                android:id="@+id/form_password"
                style="@style/NoBackgroundTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8"
                app:passwordToggleEnabled="false">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/empty_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </custom.view.widget.NoChangingBackgroundTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_12"
                android:layout_marginEnd="@dimen/view_8"
                android:ellipsize="end"
                android:maxLength="32"
                android:maxLines="1"
                android:text="@string/title_confirm_new_password" />

            <custom.view.widget.NoChangingBackgroundTextInputLayout
                android:id="@+id/form_confirm_password"
                style="@style/NoBackgroundTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/empty_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </custom.view.widget.NoChangingBackgroundTextInputLayout>

            <Button
                android:id="@+id/bt_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_32"
                android:layout_marginEnd="@dimen/view_8"
                android:enabled="false"
                android:text="@string/title_done" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>