<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/view_24"
        android:paddingTop="@dimen/view_32"
        android:paddingEnd="@dimen/view_24"
        android:paddingBottom="@dimen/view_32">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register_now"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_8"
            android:text="@string/label_please_fill_up_register"
            android:textColor="@color/logo_scheme_2" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/view_16">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_12"
                android:layout_marginEnd="@dimen/view_8"
                android:text="@string/title_name" />

            <custom.view.widget.NoChangingBackgroundTextInputLayout
                android:id="@+id/form_name"
                style="@style/NoBackgroundTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/empty_hint"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:maxLength="64"
                    android:maxLines="1" />
            </custom.view.widget.NoChangingBackgroundTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_12"
                android:layout_marginEnd="@dimen/view_8"
                android:text="@string/title_gender" />

            <RadioGroup
                android:id="@+id/rb_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_4"
                android:layout_marginTop="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/view_32"
                    android:text="@string/title_female" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_12"
                android:layout_marginEnd="@dimen/view_8"
                android:text="@string/title_email" />

            <custom.view.widget.NoChangingBackgroundTextInputLayout
                android:id="@+id/form_email"
                style="@style/NoBackgroundTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/empty_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:maxLength="32"
                    android:maxLines="1" />
            </custom.view.widget.NoChangingBackgroundTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_12"
                android:layout_marginEnd="@dimen/view_8"
                android:text="@string/title_phone_number" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8">

                <custom.view.widget.NoChangingBackgroundTextInputLayout
                    android:id="@+id/form_phone"
                    style="@style/NoBackgroundTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890"
                        android:ellipsize="end"
                        android:hint="@string/empty_hint"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="numberSigned"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:paddingStart="@dimen/view_64"
                        android:paddingEnd="@dimen/view_0" />
                </custom.view.widget.NoChangingBackgroundTextInputLayout>

                <TextView
                    android:id="@+id/phone_code"
                    android:layout_width="@dimen/view_56"
                    android:layout_height="match_parent"
                    android:layout_alignTop="@id/form_phone"
                    android:layout_alignBottom="@id/form_phone"
                    android:layout_marginBottom="@dimen/view_2"
                    android:gravity="center"
                    android:paddingStart="@dimen/view_8"
                    android:paddingTop="@dimen/view_10"
                    android:paddingEnd="@dimen/view_8"
                    android:paddingBottom="@dimen/view_16"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/text_16" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_12"
                android:layout_marginEnd="@dimen/view_8"
                android:ellipsize="end"
                android:maxLength="32"
                android:maxLines="1"
                android:text="@string/title_create_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8"
                android:text="@string/label_password_clue"
                android:textColor="@color/logo_scheme_3" />

            <custom.view.widget.NoChangingBackgroundTextInputLayout
                android:id="@+id/form_password"
                style="@style/NoBackgroundTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8"
                app:passwordToggleEnabled="false">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/empty_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </custom.view.widget.NoChangingBackgroundTextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_12"
                android:layout_marginEnd="@dimen/view_8"
                android:ellipsize="end"
                android:maxLength="32"
                android:maxLines="1"
                android:text="@string/title_confirm_password" />

            <custom.view.widget.NoChangingBackgroundTextInputLayout
                android:id="@+id/form_confirm_password"
                style="@style/NoBackgroundTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginEnd="@dimen/view_8"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/empty_hint"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />
            </custom.view.widget.NoChangingBackgroundTextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_4"
                android:layout_marginTop="@dimen/view_20"
                android:layout_marginEnd="@dimen/view_4">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/view_4"
                    android:layout_marginEnd="@dimen/view_4" />

                <TextView
                    android:id="@+id/tv_tos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/view_6"
                    android:text="@string/span_agree_with_tos" />
            </LinearLayout>


            <Button
                android:id="@+id/bt_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_8"
                android:layout_marginTop="@dimen/view_32"
                android:layout_marginEnd="@dimen/view_8"
                android:enabled="false"
                android:text="@string/title_create_account" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>